Dev/impliment/src/objects/CheckObjSep07__c.object
<CustomObject>
    <fields>
        <fullName>Num1__c</fullName>
        <description>dfdsfdsfdsdsfdsfdsfdsf</description>
        <label>Num1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Num2__c</fullName>
        <description>dfdsfds</description>
        <label>Num2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Num3__c</fullName>
        <description>vcxvxc</description>
        <label>Num3</label>
        <type>AutoNumber</type>
    </fields>
    <label>CheckObjSep07</label>
    <nameField>
        <label>CheckObjSep07 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CheckObjSep07s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>